<resources>
    <!--<string name="app_name">Project</string>-->
    <string name="registerString">Don\'t have an account</string>
    <string name="registerButton">Register</string>
    <string name="loginString">Already have an account?</string>
    <string name="loginButton">Log In</string>
    <string name="signUpString">Sign Up</string>
    <string name="accountDetails">Account Details</string>
    <string name="firstNameHint">First name</string>
    <string name="lastNameHint">Last name</string>
    <string name="emailHint">Email</string>
    <string name="passwordHint">Password</string>
    <string name="confirmPasswordHint">Confirm password</string>
    <string name="joinButton">Join</string>
    <string name="title_activity_teacher_profile">TeacherProfileActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="username">username</string>
    <string name="description">description</string>
    <string name="nrOfTests">Number of Tests</string>
    <string name="title_activity_add_question">AddQuestionActivity</string>
    <string name="action_delete">Delete</string>
    <string name="action_awardPoints">Award Points</string>


    <string name="app_name">GameApp</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="title_activity_teacher_student">TeacherStudentActivity</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="password">Password</string>
    <string name="university">University</string>
    <string name="join">Join</string>
    <string name="log_in">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="email"> Email </string>
    <string name="submit">Submit</string>
    <string name="teacher"> Teacher </string>
    <string name="cancel"> Cancel </string>
    <string name="done"> Done </string>
    <string name="Create_Quiz"> Create QuizTest </string>
    <string name="title_quiz_test">Title</string>
    <string name="cod_test">Cod</string>
    <!--<string name="description">Description</string>-->
    <string name="visibility">Visibility</string>
    <string name="add">Add Question</string>
    <string name="option">Option</string>
    <string name="error_text">Error</string>
    <string name="text"> Add your feedbacks here </string>
    <string-array name="array_name">
        <item>Individual</item>
        <item>Group</item>
    </string-array>
    <string name="title_activity_student_profile">StudentProfile</string>

    <!--<string name="username">username</string>-->
    <string name="score">score</string>
    <string name="title">title</string>
    <string name="tests">no of tests</string>
    <string name="Grupa">Grupa</string>
    <string name="Seria">Seria</string>
    <string name="Help">Help</string>
    <string name="student">Student</string>

</resources>
