<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/grad_bg"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".StudentSignUpActivity">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:text="@string/loginString" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginEnd="8dp"
            android:text="@string/loginButton" />
    </GridLayout>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/signUpString"/>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accountDetails"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/firstNameEditView"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="10dp"
        android:hint="@string/firstNameHint"
        android:padding="10dp"
        android:paddingStart="5dp"/>
    <EditText
        android:id="@+id/lastNameEditView"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="5dp"
        android:hint="@string/lastNameHint"
        android:padding="10dp"
        android:paddingStart="5dp"/>
    <EditText
        android:id="@+id/emailEditView"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="5dp"
        android:hint="@string/emailHint"
        android:padding="10dp"
        android:paddingStart="5dp"/>
    <EditText
        android:id="@+id/passwordEditView"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="5dp"
        android:hint="@string/passwordHint"
        android:padding="10dp"
        android:paddingStart="5dp"/>
    <EditText
        android:id="@+id/confirmPasswordEditView"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="5dp"
        android:hint="@string/confirmPasswordHint"
        android:padding="10dp"
        android:paddingStart="5dp"/>

    <Button
        android:id="@+id/joinButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/joinButton"
        android:layout_gravity="center"
        android:layout_marginTop="17dp"
        android:onClick="navigateToStudentProfile"/>

</LinearLayout>