<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grad_bg"
    tools:context=".CreateQuizTest">
    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/Cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginBottom="16dp"

            android:text="@string/cancel" />
        <Button
            android:id="@+id/Done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginBottom="16dp"

            android:text="@string/done"
            />
        <TextView
            android:id="@+id/TitleTest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_gravity="center_horizontal"
            android:text="@string/Create_Quiz"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginRight="70dp"
            android:layout_marginTop="20dp"
            />

        <ImageView
            android:id="@+id/ImageCover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            />
        <EditText
            android:id="@+id/Cod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:textSize="30sp"
            android:textStyle="bold"
            android:hint="@string/cod_test"
            android:inputType="textPersonName"
            android:padding="15dp"
            />

        <EditText
            android:id="@+id/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="1"
            android:textSize="30sp"
            android:textStyle="bold"
            android:hint="@string/title_quiz_test"
            android:inputType="textPersonName"
            android:padding="15dp"
            />

        <EditText
            android:id="@+id/Description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="1"
            android:textSize="30sp"
            android:textStyle="normal"
            android:hint="@string/description"
            android:inputType="textPersonName"
            android:padding="15dp"
            />
        <TextView
            android:id="@+id/Visibility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="1"
            android:layout_gravity="left"
            android:text="@string/visibility"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginRight="90dp"
            android:layout_marginTop="20dp"
            />
        <Switch
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/switch1"
            android:checked="false"
            android:layout_row="6"
            android:layout_column="1"
            />

        <Button
            android:id="@+id/AddQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_row="6"
            android:layout_column="1"
            android:text="@string/add"
            android:textSize="20sp"
            android:textStyle="bold"
            android:onClick="addQuestion"
            />
        <TextView
            android:id="@+id/Option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="7"
            android:layout_column="1"
            android:layout_gravity="left"
            android:text="@string/option"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginRight="90dp"
            android:layout_marginTop="20dp"
            />
        <Spinner
            android:id="@+id/Spinner1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="8"
            android:layout_column="1"
            android:entries="@array/array_name"
            />



    </GridLayout>
</ScrollView>