<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".StudentProfile"
    tools:showIn="@layout/app_bar_student_profile"
    android:padding="16dp"
    android:orientation="vertical"
    android:background="@drawable/grad_bg">


    <ImageView
        android:id="@+id/profilePhoto"
        android:layout_width="160dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp" />

    <Button
        android:id="@+id/importButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Import photo " />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="0dp"
        android:text="@string/username"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="0dp"
        android:id="@+id/title1"
        android:hint="@string/title"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="score"
        android:padding="0dp"
        android:id="@+id/score"

        android:text="@string/score"/>

    <TextView
        android:id="@+id/nooftests"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="tests"
        android:padding="0dp"
        android:text="@string/tests" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="Add Test PIN"
        android:layout_gravity="center"
        android:id="@+id/addTestPin"
        />

</LinearLayout>