<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/grad_bg"
    tools:context=".ResetPassword">

    <!--sign up-->
    <Button
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_gravity="right"
        android:layout_marginTop="20dp"
        android:onClick="navigateToSignUp"/>
    <!--reset your password-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Reset your password"
        android:layout_gravity="center_horizontal"
        android:textSize="35dp"
        android:layout_marginTop="35dp"/>

    <!--enter your email-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Enter your email "
        android:textSize="25dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"/>
    <!--email textbox-->
    <EditText
        android:id="@+id/emailEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:layout_gravity="center_horizontal"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnOKSubmit"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:text="@string/submit"/>
</LinearLayout>