<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/grad_bg"
    tools:context=".TeacherSignUp">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Already got an account? "
        android:layout_gravity="right"
        android:textSize="20dp"/>
    <Button
        android:id="@+id/loginProf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/log_in"
        android:onClick="logIn"/>
    <!--sign up-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="32dp"
        android:text="Sign Up"
        android:textSize="40sp"
        android:textStyle="normal" />

    <!--prenume-->
    <EditText
        android:id="@+id/Prenume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="2dp"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/first_name" />
    <!--nume-->


    <EditText
        android:id="@+id/Nume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/last_name"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="2dp"/>
    <!--email-->
    <EditText
        android:id="@+id/Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="2dp"
        android:hint="@string/prompt_email"/>
    <!--password-->
    <EditText
        android:id="@+id/Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="2dp"
        android:hint="@string/password"/>
    <!--password again-->
    <EditText
        android:id="@+id/Password2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="2dp"
        android:hint="@string/password"/>

    <!--discipline-->
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >


            <CheckBox
                android:id="@+id/ck1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tehnologii Web"
                />
            <CheckBox
                android:id="@+id/ck2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="DAM"
                />
            <CheckBox
                android:id="@+id/ck3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Retele"
                />
            <CheckBox
                android:id="@+id/ck8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="C#"
                />
        </RadioGroup>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <CheckBox
                android:id="@+id/ck4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Analiza Datelor"
                />
            <CheckBox
                android:id="@+id/ck5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="POO"
                />
            <CheckBox
                android:id="@+id/ck6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Java"
                />
            <CheckBox
                android:id="@+id/ck7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SDD"
                />


        </RadioGroup>

    </RadioGroup>

    <!--school-->

    <EditText
        android:id="@+id/School"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="2dp"
        android:hint="@string/university"/>

    <!--terms and conditions-->


    <Switch
        android:id="@+id/Terms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Terms and conditions"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="2dp"
        android:checked="false"/>


    <Button
        android:id="@+id/btnJoin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:text="@string/join"
        android:onClick="join"
        />
</LinearLayout>