<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grad_bg">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/grad_bg"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".TeacherProfileActivity"
    tools:showIn="@layout/app_bar_teacher_profile">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/teacherAvatar"
            android:src="@drawable/teacher"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_gravity="center"
            android:visibility="visible"
            android:scaleType="centerCrop"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="20dp"
           />

    </GridLayout>


    <TextView
        android:id="@+id/profileUsernameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        android:text="@string/username"/>

    <TextView
        android:id="@+id/profileDescriptionEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        android:text="@string/description"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        android:text="@string/nrOfTests"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Load Photo"
        android:id="@+id/loadPhotoButton"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/addTestButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add Test"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:onClick="addQuestion"/>

</LinearLayout>
</ScrollView>